fix for rounded search input on iOS

--- a/src/scss/grommet-core/_objects.search.scss
+++ b/src/scss/grommet-core/_objects.search.scss
@@ -16,6 +16,8 @@
 
   &__input {
     margin-right: 0px;
+    border-radius: 0;
+    -webkit-appearance: none;
 
     .header & {
       font-size: inherit;
